fix: prometheus docker linking
Signed-off-by: Nikola Marcetic <n.marcetic86@gmail.com>

--- a/docker/volumes/grafana/provisioning/prometheus.yaml
+++ b/docker/volumes/grafana/provisioning/prometheus.yaml
@@ -5,6 +5,6 @@ global:
 scrape_configs:
   - job_name: "cosmops"
     static_configs:
-      - targets: ["localhost:26660"]
+      - targets: ["injective-core:26660"]
         labels:
           group: "cosmops"
