feat: pin provisioner image

--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -5,6 +5,8 @@
 ###############################
 ### Start User Configurable ###
 ###############################
+# Provisioner #
+UBUNTU_VERSION=jammy
 
 # Network Env #
 MONIKER=injective
