--- a/docker/addons/docker-compose.provisioner.yaml
+++ b/docker/addons/docker-compose.provisioner.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   provisioner:
     container_name: injective-provisioner
-    image: ubuntu:latest
+    image: ubuntu:${UBUNTU_VERSION}
     command: [ "bash", "/home/ubuntu/scripts/provision-core.sh" ]
     environment:
       TZ: America/New_York
