"test env - modified inj core"

--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -30,10 +30,10 @@ MONGO_WIREDTIGER_CACHE_GB=56
 
 # Snapshots #
 SYNC_CORE_SNAPSHOT="true"
-SYNC_EXCHANGE_SNAPSHOT="true"
+SYNC_EXCHANGE_SNAPSHOT="false"
 SYNC_EXPLORER_SNAPSHOT="false"
-SYNC_CHRONOS_SNAPSHOT="true"
-SYNC_EVENT_PROVIDER_SNAPSHOT="true"
+SYNC_CHRONOS_SNAPSHOT="false"
+SYNC_EVENT_PROVIDER_SNAPSHOT="false"
 
 # Logging Env #
 LOG_LEVEL="info"
