--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -47,6 +47,8 @@ services:
         --statsd-enabled=${INJ_STATSD_ENABLED} \
         --statsd-agent=${INJ_STATSD_AGENT} \
         ${INJ_CORE_CMD_STREAM_API} \
+        --statsd-tracing-enabled=false \
+        --statsd-profiling-enabled=false \
         --wasm.memory_cache_size ${WASM_MEM_CACHE_SIZE} \
         start
     ports:
