--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -179,6 +179,7 @@ services:
       # cmd specific
       INDEXER_EXCHANGE_REBUILD_ORDERBOOKS: ${INDEXER_EXCHANGE_REBUILD_ORDERBOOKS}
       INDEXER_SPOT_GRID_TRADING_CONTRACT_WHITELIST: ${INDEXER_SPOT_GRID_TRADING_CONTRACT_WHITELIST}
+      ASSET_SERVICE_GRPC_ADDRESS: ${ASSET_SERVICE_GRPC_ADDRESS}
       ## feature flags
       INDEXER_FEATURE_FLAG_TRADING_STRATEGIES_INDEXING: "true"
       ## mongo
@@ -258,6 +259,7 @@ services:
       INDEXER_PPROF_ENABLED: "false"
       INDEXER_PPROF_ADDR: "0.0.0.0:6060"
       # cmd specific
+      ASSET_SERVICE_GRPC_ADDRESS: ${ASSET_SERVICE_GRPC_ADDRESS}
       ## mongo
       INDEXER_DB_MONGO_CONNECTION: ${INDEXER_DB_MONGO_CONNECTION}
       INDEXER_DB_MONGO_DBNAME: ${INDEXER_DB_MONGO_DBNAME}
