--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -85,6 +85,7 @@ ALCHEMY_ENDPOINT=
 EXCHANGE_FEE_PAYER_PK=
 HOSTNAME=
 ASSET_SERVICE_URL=https://k8s.testnet.asset.injective.network
+ASSET_SERVICE_GRPC_ADDRESS=k8s.testnet.asset.grpc.injective.network:443
 
 # Indexer Exchange env #
 INDEXER_DB_MIGRATION_VERSION="v0"
