feat: add asset service grpc address to exchange-import

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -129,6 +129,7 @@ services:
       INDEXER_PPROF_ENABLED: "false"
       INDEXER_PPROF_ADDR: "0.0.0.0:6060"
       # cmd specific
+      ASSET_SERVICE_GRPC_ADDRESS: ${ASSET_SERVICE_GRPC_ADDRESS}
       ## mongo
       INDEXER_DB_MONGO_CONNECTION: ${INDEXER_DB_MONGO_CONNECTION}
       INDEXER_DB_MONGO_DBNAME: ${INDEXER_DB_MONGO_DBNAME}
