feat(docker-compose): add missing env for asset service

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -129,7 +129,9 @@ services:
       INDEXER_PPROF_ENABLED: "false"
       INDEXER_PPROF_ADDR: "0.0.0.0:6060"
       # cmd specific
+      INDEXER_ASSETS_SERVICE_URL: ${INDEXER_ASSETS_SERVICE_URL}
       ASSET_SERVICE_GRPC_ADDRESS: ${ASSET_SERVICE_GRPC_ADDRESS}
+      ASSET_SERVICE_USE_HTTP: ${ASSET_SERVICE_USE_HTTP}
       ## mongo
       INDEXER_DB_MONGO_CONNECTION: ${INDEXER_DB_MONGO_CONNECTION}
       INDEXER_DB_MONGO_DBNAME: ${INDEXER_DB_MONGO_DBNAME}
@@ -180,7 +182,9 @@ services:
       # cmd specific
       INDEXER_EXCHANGE_REBUILD_ORDERBOOKS: ${INDEXER_EXCHANGE_REBUILD_ORDERBOOKS}
       INDEXER_SPOT_GRID_TRADING_CONTRACT_WHITELIST: ${INDEXER_SPOT_GRID_TRADING_CONTRACT_WHITELIST}
+      INDEXER_ASSETS_SERVICE_URL: ${INDEXER_ASSETS_SERVICE_URL}
       ASSET_SERVICE_GRPC_ADDRESS: ${ASSET_SERVICE_GRPC_ADDRESS}
+      ASSET_SERVICE_USE_HTTP: ${ASSET_SERVICE_USE_HTTP}
       ## feature flags
       INDEXER_FEATURE_FLAG_TRADING_STRATEGIES_INDEXING: "true"
       ## mongo
@@ -260,7 +264,9 @@ services:
       INDEXER_PPROF_ENABLED: "false"
       INDEXER_PPROF_ADDR: "0.0.0.0:6060"
       # cmd specific
+      INDEXER_ASSETS_SERVICE_URL: ${INDEXER_ASSETS_SERVICE_URL}
       ASSET_SERVICE_GRPC_ADDRESS: ${ASSET_SERVICE_GRPC_ADDRESS}
+      ASSET_SERVICE_USE_HTTP: ${ASSET_SERVICE_USE_HTTP}
       ## mongo
       INDEXER_DB_MONGO_CONNECTION: ${INDEXER_DB_MONGO_CONNECTION}
       INDEXER_DB_MONGO_DBNAME: ${INDEXER_DB_MONGO_DBNAME}
