fea(IL-28): add mixpanel support

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -179,6 +179,8 @@ services:
       # cmd specific
       INDEXER_EXCHANGE_REBUILD_ORDERBOOKS: ${INDEXER_EXCHANGE_REBUILD_ORDERBOOKS}
       INDEXER_SPOT_GRID_TRADING_CONTRACT_WHITELIST: ${INDEXER_SPOT_GRID_TRADING_CONTRACT_WHITELIST}
+      INDEXER_MIXPANEL_ENABLED: ${INDEXER_MIXPANEL_ENABLED}
+      INDEXER_MIXPANEL_PROJECT_TOKEN: ${INDEXER_MIXPANEL_PROJECT_TOKEN}
       ## feature flags
       INDEXER_FEATURE_FLAG_TRADING_STRATEGIES_INDEXING: "true"
       ## mongo
