fea(IL-28): add env var job interval stats for exchange-process

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -188,6 +188,7 @@ services:
       ASSET_SERVICE_USE_HTTP: ${ASSET_SERVICE_USE_HTTP}
       INDEXER_MIXPANEL_ENABLED: ${INDEXER_MIXPANEL_ENABLED}
       INDEXER_MIXPANEL_PROJECT_TOKEN: ${INDEXER_MIXPANEL_PROJECT_TOKEN}
+      INDEXER_EXCHANGE_STATS_JOB_INTERVAL: ${INDEXER_EXCHANGE_STATS_JOB_INTERVAL}
       ## feature flags
       INDEXER_FEATURE_FLAG_TRADING_STRATEGIES_INDEXING: "true"
       ## mongo
