--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -100,6 +100,7 @@ INDEXER_FEATURE_FLAG_TRADING_STRATEGIES_INDEXING="true"
 INDEXER_SPOT_GRID_TRADING_CONTRACT_WHITELIST=inj1c5jsz3dk2g6wywygchwrlwxl5gyz2yu7rnxxdr,inj1x4kr29dlf9u4r7ya6mr2jvs0pc9sfhnlhlr9np,inj1ljzjh8tzuvrj7mkhv9mxvv4cedn7kzauargrey
 INDEXER_MIXPANEL_ENABLED: "false"
 INDEXER_MIXPANEL_PROJECT_TOKEN: "8af30f3d17304127b2ed18e385612325"
+INDEXER_EXCHANGE_STATS_JOB_INTERVAL: "@every 8h"
 
 # Indexer Web3GW env #
 INDEXER_WEB3GW_HTTP_HEALTH_CHECK_ENDPOINT="http://sentry-sidecar:8888/health/readiness"
