fix: updated env files examples

--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -98,9 +98,9 @@ INDEXER_DB_MIGRATION_NAME="account_portfolio_subaccount_initV1"
 INDEXER_EXCHANGE_REBUILD_ORDERBOOKS="false"
 INDEXER_FEATURE_FLAG_TRADING_STRATEGIES_INDEXING="true"
 INDEXER_SPOT_GRID_TRADING_CONTRACT_WHITELIST=inj14yr8nj6tndmr4xyw9c66feqepv59revxsm7450,inj1djlhetddzrztjn4v0s4vt0dca3y8hwshkh37zg,inj1aehu642q3td95jlpprgcypmstmn3pknaq4rsjn,inj18sl3ysva0czdgc2eqmqlrhfeu2v4l8vx4245ql
-INDEXER_MIXPANEL_ENABLED: "false"
-INDEXER_MIXPANEL_PROJECT_TOKEN: "8af30f3d17304127b2ed18e385612325"
-INDEXER_EXCHANGE_STATS_JOB_INTERVAL: "@every 8h"
+INDEXER_MIXPANEL_ENABLED="false"
+INDEXER_MIXPANEL_PROJECT_TOKEN="8af30f3d17304127b2ed18e385612325"
+INDEXER_EXCHANGE_STATS_JOB_INTERVAL="@every 8h"
 
 # Indexer Web3GW env #
 INDEXER_WEB3GW_HTTP_HEALTH_CHECK_ENDPOINT="http://sentry-sidecar:8888/health/readiness"
