Change logging format to JSON

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -112,6 +112,7 @@ services:
     environment:
       # universal
       INDEXER_LOG_LEVEL: ${LOG_LEVEL}
+      INDEXER_LOG_FORMAT: ${LOG_FORMAT}
       INDEXER_ENV: ${APP_ENV}
       INDEXER_SERVICE_WAIT_TIMEOUTEVEL: 1m
       # bugsnag
@@ -163,6 +164,7 @@ services:
     environment:
       # universal
       INDEXER_LOG_LEVEL: ${LOG_LEVEL}
+      INDEXER_LOG_FORMAT: ${LOG_FORMAT}
       INDEXER_ENV: ${APP_ENV}
       INDEXER_SERVICE_WAIT_TIMEOUTEVEL: 1m
       # bugsnag
@@ -250,6 +252,7 @@ services:
     environment:
       # universal
       INDEXER_LOG_LEVEL: ${LOG_LEVEL}
+      INDEXER_LOG_FORMAT: ${LOG_FORMAT}
       INDEXER_ENV: ${APP_ENV}
       INDEXER_SERVICE_WAIT_TIMEOUTEVEL: 1m
       # bugsnag
