--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -40,6 +40,7 @@ SYNC_EVENT_PROVIDER_SNAPSHOT_TYPE="pruned"
 
 # Logging Env #
 LOG_LEVEL="info"
+LOG_FORMAT="json"
 LOG_BUGSNAG_KEY=
 LOG_BUGSNAG_ENABLED=false
 
