change log format for addons

--- a/docker/addons/docker-compose.dex.yaml
+++ b/docker/addons/docker-compose.dex.yaml
@@ -17,6 +17,7 @@ services:
     environment:
       # universal
       INDEXER_LOG_LEVEL: ${LOG_LEVEL}
+      INDEXER_LOG_FORMAT: ${LOG_FORMAT}
       #${LOG_LEVEL}
       INDEXER_ENV: ${APP_ENV}
       INDEXER_SERVICE_WAIT_TIMEOUTEVEL: 1m
@@ -89,6 +90,7 @@ services:
     environment:
       # universal
       INDEXER_LOG_LEVEL: ${LOG_LEVEL}
+      INDEXER_LOG_FORMAT: ${LOG_FORMAT}
       INDEXER_ENV: ${APP_ENV}
       INDEXER_SERVICE_WAIT_TIMEOUTEVEL: 1m
       # bugsnag
@@ -147,6 +149,7 @@ services:
     environment:
       # universal
       INDEXER_LOG_LEVEL: ${LOG_LEVEL}
+      INDEXER_LOG_FORMAT: ${LOG_FORMAT}      
       INDEXER_ENV: ${APP_ENV}
       INDEXER_SERVICE_WAIT_TIMEOUTEVEL: 1m
       # bugsnag
@@ -215,6 +218,7 @@ services:
     environment:
       # universal
       INDEXER_LOG_LEVEL: ${LOG_LEVEL}
+      INDEXER_LOG_FORMAT: ${LOG_FORMAT}
       INDEXER_ENV: ${APP_ENV}
       INDEXER_SERVICE_WAIT_TIMEOUTEVEL: 1m
       # bugsnag
@@ -271,6 +275,7 @@ services:
     environment:
       # universal
       INDEXER_LOG_LEVEL: ${LOG_LEVEL}
+      INDEXER_LOG_FORMAT: ${LOG_FORMAT}
       INDEXER_ENV: ${APP_ENV}
       INDEXER_SERVICE_WAIT_TIMEOUTEVEL: 1m
       # bugsnag
@@ -333,6 +338,7 @@ services:
     environment:
       # universal
       INDEXER_LOG_LEVEL: ${LOG_LEVEL}
+      INDEXER_LOG_FORMAT: ${LOG_FORMAT}
       INDEXER_ENV: ${APP_ENV}
       INDEXER_SERVICE_WAIT_TIMEOUTEVEL: 1m
       # bugsnag
@@ -391,6 +397,7 @@ services:
     environment:
       # universal
       INDEXER_LOG_LEVEL: ${LOG_LEVEL}
+      INDEXER_LOG_FORMAT: ${LOG_FORMAT}
       INDEXER_ENV: ${APP_ENV}
       INDEXER_SERVICE_WAIT_TIMEOUTEVEL: 1m
       # bugsnag
