Move horacle threshold to env
Signed-off-by: Nikola Marcetic <n.marcetic86@gmail.com>

--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -142,3 +142,5 @@ INDEXER_MAX_BLOCK_FETCH_JOBS=8
 INDEXER_MIN_BLOCK_FETCH_JOBS=2
 INDEXER_EVENTPROVIDER_BLOCK_FETCH_JOBS=2
 INDEXER_HTTP_HORACLE_ADDR="https://k8s.testnet.horacle.injective.network/height/latest"
+INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD=30
+INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD=60
