--- a/docker/addons/docker-compose.dex.yaml
+++ b/docker/addons/docker-compose.dex.yaml
@@ -61,8 +61,8 @@ services:
       INDEXER_HTTP_TLS_CERT: /apps/data/public.crt
       INDEXER_HTTP_TLS_KEY: /apps/data/private.key
       INDEXER_HTTP_HORACLE_ADDR: ${INDEXER_HTTP_HORACLE_ADDR}
-      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 10
-      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: 60
+      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
+      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
     ports:
       - 5500:5500
       - 6073:6060
@@ -121,8 +121,8 @@ services:
       INDEXER_HTTP_TLS_CERT: /apps/data/public.crt
       INDEXER_HTTP_TLS_KEY: /apps/data/private.key
       INDEXER_HTTP_HORACLE_ADDR: ${INDEXER_HTTP_HORACLE_ADDR}
-      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 10
-      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: 60
+      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
+      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
       INDEXER_EXCHANGE_RPC_ADDR: ${INDEXER_EXCHANGE_RPC_ADDR}
     ports:
       - 4445:4445
@@ -189,8 +189,8 @@ services:
       INDEXER_HTTP_TLS_CERT: /apps/data/public.crt
       INDEXER_HTTP_TLS_KEY: /apps/data/private.key
       INDEXER_HTTP_HORACLE_ADDR: ${INDEXER_HTTP_HORACLE_ADDR}
-      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 10
-      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: 60
+      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
+      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
     ports:
       - 6075:6060
       - 19911:9910
@@ -244,8 +244,8 @@ services:
       INDEXER_HTTP_TLS_CERT: /apps/data/public.crt
       INDEXER_HTTP_TLS_KEY: /apps/data/private.key
       INDEXER_HTTP_HORACLE_ADDR: ${INDEXER_HTTP_HORACLE_ADDR}
-      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 10
-      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: 60
+      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
+      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
     ports:
       - 4446:4444
       - 9911:9910
@@ -306,8 +306,8 @@ services:
       INDEXER_HTTP_TLS_CERT: /apps/data/public.crt
       INDEXER_HTTP_TLS_KEY: /apps/data/private.key
       INDEXER_HTTP_HORACLE_ADDR: ${INDEXER_HTTP_HORACLE_ADDR}
-      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 10
-      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: 60
+      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
+      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
     ports:
       - 6069:6060
       - 19912:9910
@@ -366,8 +366,8 @@ services:
       INDEXER_HTTP_TLS_CERT: /apps/data/public.crt
       INDEXER_HTTP_TLS_KEY: /apps/data/private.key
       INDEXER_HTTP_HORACLE_ADDR: ${INDEXER_HTTP_HORACLE_ADDR}
-      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 10
-      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: 60
+      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
+      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
     ports:
       - 4443:4444
       - 6070:6060
