--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -223,8 +223,8 @@ services:
       INDEXER_HTTP_TLS_CERT: /apps/data/public.crt
       INDEXER_HTTP_TLS_KEY: /apps/data/private.key
       INDEXER_HTTP_HORACLE_ADDR: ${INDEXER_HTTP_HORACLE_ADDR}
-      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 10
-      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: 60
+      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
+      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
     ports:
       - 6071:6060
       - 19910:19910
@@ -288,8 +288,8 @@ services:
       INDEXER_HTTP_TLS_CERT: /apps/data/public.crt
       INDEXER_HTTP_TLS_KEY: /apps/data/private.key
       INDEXER_HTTP_HORACLE_ADDR: ${INDEXER_HTTP_HORACLE_ADDR}
-      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 10
-      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: 60
+      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
+      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
     ports:
       - 4444:4444
       - 9910:9910
