change default log level to error

--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -39,7 +39,7 @@ SYNC_EVENT_PROVIDER_SNAPSHOT="true"
 SYNC_EVENT_PROVIDER_SNAPSHOT_TYPE="pruned"
 
 # Logging Env #
-LOG_LEVEL="info"
+LOG_LEVEL="error"
 LOG_FORMAT="json"
 LOG_BUGSNAG_KEY=
 LOG_BUGSNAG_ENABLED=false
