chore: Added new env vars to be used in health check

--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -142,5 +142,6 @@ INDEXER_MAX_BLOCK_FETCH_JOBS=8
 INDEXER_MIN_BLOCK_FETCH_JOBS=2
 INDEXER_EVENTPROVIDER_BLOCK_FETCH_JOBS=2
 INDEXER_HTTP_HORACLE_ADDR="https://k8s.global.mainnet.horacle.injective.network/height/latest"
-INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD=30
-INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD=60
+INDEXER_HTTP_EP_ADDR="https://k8s.global.mainnet.events.grpc-web.injective.network/api/event_provider/v1/latestheight"
+INDEXER_HEALTH_BLOCKDIFF_THRESHOLD=30
+INDEXER_HEALTH_TIMEDIFF_THRESHOLD=60
