fea(IL-507): add new ep env vars

--- a/docker/addons/docker-compose.dex.yaml
+++ b/docker/addons/docker-compose.dex.yaml
@@ -295,8 +295,12 @@ services:
       INDEXER_DB_BLOCK_BATCH: 50
       ## cosmos
       INDEXER_COSMOS_CHAIN_ID: ${CHAIN_ID}
+      # deprecated: Use INDEXER_TENDERMINT_RPC_ENDPOINTS instead
       INDEXER_TENDERMINT_RPC: ${INDEXER_TENDERMINT_RPC}
+      INDEXER_TENDERMINT_RPC_ENDPOINTS: ${INDEXER_TENDERMINT_RPC}
+      # deprecated: Use INDEXER_COSMOS_GRPC_ENDPOINTS instead
       INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
+      INDEXER_COSMOS_GRPC_ENDPOINTS: ${INDEXER_COSMOS_GRPC}
       INDEXER_BLOCK_FETCH_JOBS: ${INDEXER_EVENTPROVIDER_BLOCK_FETCH_JOBS}
       INDEXER_CHAIN_START_HEIGHT: ${INDEXER_CHAIN_START_HEIGHT}
       INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
