--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -135,7 +135,9 @@ INDEXER_DB_MONGO_CONNECTION="mongodb://mongo:27017/?replicaSet=rs0&connect=direc
 INDEXER_DB_EVENTPROVIDER_ENDPOINT=indexer-eventprovider-api:4444
 INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS=indexer-eventprovider-api:9910
 INDEXER_TENDERMINT_RPC=tcp://injective-core:26657
+INDEXER_TENDERMINT_RPC_ENDPOINTS=tcp://injective-core:26657
 INDEXER_COSMOS_GRPC=tcp://injective-core:9900
+INDEXER_COSMOS_GRPC_ENDPOINTS=tcp://injective-core:9900
 INDEXER_COSMOS_LCD_URL=http://injective-core:10337
 INDEXER_EXCHANGE_RPC_ADDR=indexer-exchange-api:9910
 INDEXER_MAX_BLOCK_FETCH_JOBS=8
