chore: Added new env vars to indexer exchange/eventprovider process and api. Also change examples to reflect new vars and removed deprecated horacle vars

--- a/docker/addons/docker-compose.dex.yaml
+++ b/docker/addons/docker-compose.dex.yaml
@@ -1,4 +1,4 @@
-version: '3.9'
+cversion: '3.9'
 
 services:
   indexer-chronos-process:
@@ -64,7 +64,7 @@ services:
       INDEXER_HTTP_EP_ADDR: ${INDEXER_HTTP_EP_ADDR}
       INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: ${INDEXER_HEALTH_BLOCKDIFF_THRESHOLD}
       INDEXER_HEALTH_TIMEDIFF_THRESHOLD: ${INDEXER_HEALTH_TIMEDIFF_THRESHOLD}
-      # Soon to be deprecated horable env vars
+      # Soon to be deprecated horacle env vars
       INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
       INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
     ports:
@@ -128,7 +128,7 @@ services:
       INDEXER_HTTP_EP_ADDR: ${INDEXER_HTTP_EP_ADDR}
       INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: ${INDEXER_HEALTH_BLOCKDIFF_THRESHOLD}
       INDEXER_HEALTH_TIMEDIFF_THRESHOLD: ${INDEXER_HEALTH_TIMEDIFF_THRESHOLD}
-      # Soon to be deprecated horable env vars
+      # Soon to be deprecated horacle env vars
       INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
       INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
     ports:
@@ -200,7 +200,7 @@ services:
       INDEXER_HTTP_EP_ADDR: ${INDEXER_HTTP_EP_ADDR}
       INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: ${INDEXER_HEALTH_BLOCKDIFF_THRESHOLD}
       INDEXER_HEALTH_TIMEDIFF_THRESHOLD: ${INDEXER_HEALTH_TIMEDIFF_THRESHOLD}
-      # Soon to be deprecated horable env vars
+      # Soon to be deprecated horacle env vars
       INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
       INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
     ports:
@@ -259,7 +259,7 @@ services:
       INDEXER_HTTP_EP_ADDR: ${INDEXER_HTTP_EP_ADDR}
       INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: ${INDEXER_HEALTH_BLOCKDIFF_THRESHOLD}
       INDEXER_HEALTH_TIMEDIFF_THRESHOLD: ${INDEXER_HEALTH_TIMEDIFF_THRESHOLD}
-      # Soon to be deprecated horable env vars
+      # Soon to be deprecated horacle env vars
       INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
       INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
     ports:
@@ -329,7 +329,7 @@ services:
       INDEXER_HTTP_EP_ADDR: ${INDEXER_HTTP_EP_ADDR}
       INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: ${INDEXER_HEALTH_BLOCKDIFF_THRESHOLD}
       INDEXER_HEALTH_TIMEDIFF_THRESHOLD: ${INDEXER_HEALTH_TIMEDIFF_THRESHOLD}
-      # Soon to be deprecated horable env vars
+      # Soon to be deprecated horacle env vars
       INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
       INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
     ports:
@@ -393,7 +393,7 @@ services:
       INDEXER_HTTP_EP_ADDR: ${INDEXER_HTTP_EP_ADDR}
       INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: ${INDEXER_HEALTH_BLOCKDIFF_THRESHOLD}
       INDEXER_HEALTH_TIMEDIFF_THRESHOLD: ${INDEXER_HEALTH_TIMEDIFF_THRESHOLD}
-      # Soon to be deprecated horable env vars
+      # Soon to be deprecated horacle env vars
       INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
       INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
     ports:
