--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -226,6 +226,9 @@ services:
       INDEXER_HTTP_EP_ADDR: ${INDEXER_HTTP_EP_ADDR}
       INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: ${INDEXER_HEALTH_BLOCKDIFF_THRESHOLD}
       INDEXER_HEALTH_TIMEDIFF_THRESHOLD: ${INDEXER_HEALTH_TIMEDIFF_THRESHOLD}
+      # Soon to be deprecated horacle health vars
+      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
+      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
     ports:
       - 6071:6060
       - 19910:19910
@@ -292,6 +295,9 @@ services:
       INDEXER_HTTP_EP_ADDR: ${INDEXER_HTTP_EP_ADDR}
       INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: ${INDEXER_HEALTH_BLOCKDIFF_THRESHOLD}
       INDEXER_HEALTH_TIMEDIFF_THRESHOLD: ${INDEXER_HEALTH_TIMEDIFF_THRESHOLD}
+      # Soon to be deprecated horacle health vars
+      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
+      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
     ports:
       - 4444:4444
       - 9910:9910
