--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -145,3 +145,6 @@ INDEXER_HTTP_HORACLE_ADDR="https://k8s.global.mainnet.horacle.injective.network/
 INDEXER_HTTP_EP_ADDR="https://k8s.global.mainnet.events.grpc-web.injective.network/api/event_provider/v1/latestheight"
 INDEXER_HEALTH_BLOCKDIFF_THRESHOLD=30
 INDEXER_HEALTH_TIMEDIFF_THRESHOLD=60
+# Deprecated health horacle env vars
+INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD=30
+INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD=60
