--- a/docker/addons/docker-compose.dex.yaml
+++ b/docker/addons/docker-compose.dex.yaml
@@ -62,11 +62,11 @@ services:
       INDEXER_HTTP_TLS_KEY: /apps/data/private.key
       INDEXER_HTTP_HORACLE_ADDR: ${INDEXER_HTTP_HORACLE_ADDR}
       INDEXER_HTTP_EP_ADDR: ${INDEXER_HTTP_EP_ADDR}
-      INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: ${INDEXER_HEALTH_BLOCKDIFF_THRESHOLD}
-      INDEXER_HEALTH_TIMEDIFF_THRESHOLD: ${INDEXER_HEALTH_TIMEDIFF_THRESHOLD}
+      INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: 30
+      INDEXER_HEALTH_TIMEDIFF_THRESHOLD: 60
       # Soon to be deprecated horacle env vars
-      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
-      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
+      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 30
+      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD:  60
     ports:
       - 5500:5500
       - 6073:6060
@@ -126,11 +126,11 @@ services:
       INDEXER_HTTP_TLS_KEY: /apps/data/private.key
       INDEXER_HTTP_HORACLE_ADDR: ${INDEXER_HTTP_HORACLE_ADDR}
       INDEXER_HTTP_EP_ADDR: ${INDEXER_HTTP_EP_ADDR}
-      INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: ${INDEXER_HEALTH_BLOCKDIFF_THRESHOLD}
-      INDEXER_HEALTH_TIMEDIFF_THRESHOLD: ${INDEXER_HEALTH_TIMEDIFF_THRESHOLD}
+      INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: 30
+      INDEXER_HEALTH_TIMEDIFF_THRESHOLD: 60
       # Soon to be deprecated horacle env vars
-      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
-      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
+      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 30
+      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD:  60
       INDEXER_EXCHANGE_RPC_ADDR: ${INDEXER_EXCHANGE_RPC_ADDR}
     ports:
       - 4445:4445
@@ -198,11 +198,11 @@ services:
       INDEXER_HTTP_TLS_KEY: /apps/data/private.key
       INDEXER_HTTP_HORACLE_ADDR: ${INDEXER_HTTP_HORACLE_ADDR}
       INDEXER_HTTP_EP_ADDR: ${INDEXER_HTTP_EP_ADDR}
-      INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: ${INDEXER_HEALTH_BLOCKDIFF_THRESHOLD}
-      INDEXER_HEALTH_TIMEDIFF_THRESHOLD: ${INDEXER_HEALTH_TIMEDIFF_THRESHOLD}
+      INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: 30
+      INDEXER_HEALTH_TIMEDIFF_THRESHOLD: 60
       # Soon to be deprecated horacle env vars
-      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
-      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
+      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 30
+      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD:  60
       INDEXER_COSMOS_LCD_URL: ${INDEXER_COSMOS_LCD_URL}
     ports:
       - 6075:6060
@@ -258,11 +258,11 @@ services:
       INDEXER_HTTP_TLS_KEY: /apps/data/private.key
       INDEXER_HTTP_HORACLE_ADDR: ${INDEXER_HTTP_HORACLE_ADDR}
       INDEXER_HTTP_EP_ADDR: ${INDEXER_HTTP_EP_ADDR}
-      INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: ${INDEXER_HEALTH_BLOCKDIFF_THRESHOLD}
-      INDEXER_HEALTH_TIMEDIFF_THRESHOLD: ${INDEXER_HEALTH_TIMEDIFF_THRESHOLD}
+      INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: 30
+      INDEXER_HEALTH_TIMEDIFF_THRESHOLD: 60
       # Soon to be deprecated horacle env vars
-      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
-      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
+      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 30
+      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD:  60
     ports:
       - 4446:4444
       - 9911:9910
@@ -328,11 +328,11 @@ services:
       INDEXER_HTTP_TLS_KEY: /apps/data/private.key
       INDEXER_HTTP_HORACLE_ADDR: ${INDEXER_HTTP_HORACLE_ADDR}
       INDEXER_HTTP_EP_ADDR: ${INDEXER_HTTP_EP_ADDR}
-      INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: ${INDEXER_HEALTH_BLOCKDIFF_THRESHOLD}
-      INDEXER_HEALTH_TIMEDIFF_THRESHOLD: ${INDEXER_HEALTH_TIMEDIFF_THRESHOLD}
+      INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: 30
+      INDEXER_HEALTH_TIMEDIFF_THRESHOLD: 60
       # Soon to be deprecated horacle env vars
-      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
-      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
+      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 30
+      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD:  60
     ports:
       - 6069:6060
       - 19912:9910
@@ -392,11 +392,11 @@ services:
       INDEXER_HTTP_TLS_KEY: /apps/data/private.key
       INDEXER_HTTP_HORACLE_ADDR: ${INDEXER_HTTP_HORACLE_ADDR}
       INDEXER_HTTP_EP_ADDR: ${INDEXER_HTTP_EP_ADDR}
-      INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: ${INDEXER_HEALTH_BLOCKDIFF_THRESHOLD}
-      INDEXER_HEALTH_TIMEDIFF_THRESHOLD: ${INDEXER_HEALTH_TIMEDIFF_THRESHOLD}
+      INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: 30
+      INDEXER_HEALTH_TIMEDIFF_THRESHOLD: 60
       # Soon to be deprecated horacle env vars
-      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
-      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
+      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 30
+      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD:  60
     ports:
       - 4443:4444
       - 6070:6060
