--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -224,11 +224,11 @@ services:
       INDEXER_HTTP_TLS_KEY: /apps/data/private.key
       INDEXER_HTTP_HORACLE_ADDR: ${INDEXER_HTTP_HORACLE_ADDR}
       INDEXER_HTTP_EP_ADDR: ${INDEXER_HTTP_EP_ADDR}
-      INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: ${INDEXER_HEALTH_BLOCKDIFF_THRESHOLD}
-      INDEXER_HEALTH_TIMEDIFF_THRESHOLD: ${INDEXER_HEALTH_TIMEDIFF_THRESHOLD}
+      INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: 30
+      INDEXER_HEALTH_TIMEDIFF_THRESHOLD: 60
       # Soon to be deprecated horacle health vars
-      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
-      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
+      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 30
+      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD:  60
     ports:
       - 6071:6060
       - 19910:19910
@@ -293,11 +293,11 @@ services:
       INDEXER_HTTP_TLS_KEY: /apps/data/private.key
       INDEXER_HTTP_HORACLE_ADDR: ${INDEXER_HTTP_HORACLE_ADDR}
       INDEXER_HTTP_EP_ADDR: ${INDEXER_HTTP_EP_ADDR}
-      INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: ${INDEXER_HEALTH_BLOCKDIFF_THRESHOLD}
-      INDEXER_HEALTH_TIMEDIFF_THRESHOLD: ${INDEXER_HEALTH_TIMEDIFF_THRESHOLD}
+      INDEXER_HEALTH_BLOCKDIFF_THRESHOLD: 30
+      INDEXER_HEALTH_TIMEDIFF_THRESHOLD: 60
       # Soon to be deprecated horacle health vars
-      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: ${INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD}
-      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: ${INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD}
+      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 30
+      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD:  60
     ports:
       - 4444:4444
       - 9910:9910
