--- a/docker/addons/docker-compose.dex.yaml
+++ b/docker/addons/docker-compose.dex.yaml
@@ -203,6 +203,7 @@ services:
       # Soon to be deprecated horacle env vars
       INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 30
       INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD:  60
+      INDEXER_EXPLORER_STATS_ENABLED: "true"
       INDEXER_COSMOS_LCD_URL: ${INDEXER_COSMOS_LCD_URL}
     ports:
       - 6075:6060
