feat: add endpoint vars

--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -134,8 +134,8 @@ INDEXER_DB_MONGO_DBNAME=exchangeV2
 INDEXER_DB_MONGO_CONNECTION="mongodb://mongo:27017/?replicaSet=rs0&connect=direct&maxPoolSize=1000"
 INDEXER_DB_EVENTPROVIDER_ENDPOINT=indexer-eventprovider-api:4444
 INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS=indexer-eventprovider-api:9910
-INDEXER_TENDERMINT_RPC=tcp://injective-core:26657
-INDEXER_COSMOS_GRPC=tcp://injective-core:9900
+INDEXER_COSMOS_GRPC_ENDPOINTS="tcp://injective-core:9900"
+INDEXER_TENDERMINT_RPC_ENDPOINTS="tcp://injective-core:26657"
 INDEXER_COSMOS_LCD_URL=http://injective-core:10337
 INDEXER_EXCHANGE_RPC_ADDR=indexer-exchange-api:9910
 INDEXER_MAX_BLOCK_FETCH_JOBS=8
@@ -145,3 +145,7 @@ INDEXER_HTTP_HORACLE_ADDR="https://k8s.global.mainnet.horacle.injective.network/
 INDEXER_HTTP_EP_ADDR="https://k8s.global.mainnet.events.grpc-web.injective.network/api/event_provider/v1/latestheight"
 INDEXER_HEALTH_BLOCKDIFF_THRESHOLD=30
 INDEXER_HEALTH_TIMEDIFF_THRESHOLD=60
+
+# Deprecated #
+INDEXER_TENDERMINT_RPC=tcp://injective-core:26657
+INDEXER_COSMOS_GRPC=tcp://injective-core:9900
