--- a/docker/addons/docker-compose.dex.yaml
+++ b/docker/addons/docker-compose.dex.yaml
@@ -40,15 +40,18 @@ services:
       # cmd specific
       # cosmos
       INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS: ${INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS}
+      INDEXER_COSMOS_GRPC_ENDPOINTS: ${INDEXER_COSMOS_GRPC_ENDPOINTS}
+      INDEXER_TENDERMINT_RPC_ENDPOINTS: ${INDEXER_TENDERMINT_RPC_ENDPOINTS}
       INDEXER_COSMOS_CHAIN_ID: ${CHAIN_ID}
-      INDEXER_TENDERMINT_RPC: ${INDEXER_TENDERMINT_RPC}
-      INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
       INDEXER_BLOCK_FETCH_JOBS: ${INDEXER_BLOCK_FETCH_JOBS}
       INDEXER_MAX_BLOCK_FETCH_JOBS: ${INDEXER_MAX_BLOCK_FETCH_JOBS}
       INDEXER_MIN_BLOCK_FETCH_JOBS: ${INDEXER_MIN_BLOCK_FETCH_JOBS}
       INDEXER_DB_EVENTPROVIDER_ENDPOINT: ${INDEXER_DB_EVENTPROVIDER_ENDPOINT}
       INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS: ${INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS}
       INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
+      # soon to be deprecated cosmos vars#
+      INDEXER_TENDERMINT_RPC: ${INDEXER_TENDERMINT_RPC}
+      INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
       # chronos
       INDEXER_CHRONOS_DATA_PATH: var/data
       INDEXER_CHRONOS_RPC_ADDR: 0.0.0.0:5500
@@ -184,13 +187,16 @@ services:
       # cosmos
       INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS: ${INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS}
       INDEXER_COSMOS_CHAIN_ID: ${CHAIN_ID}
-      INDEXER_TENDERMINT_RPC: ${INDEXER_TENDERMINT_RPC}
-      INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
+      INDEXER_COSMOS_GRPC_ENDPOINTS: ${INDEXER_COSMOS_GRPC_ENDPOINTS}
+      INDEXER_TENDERMINT_RPC_ENDPOINTS: ${INDEXER_TENDERMINT_RPC_ENDPOINTS}
       INDEXER_BLOCK_FETCH_JOBS: 2
       INDEXER_MAX_BLOCK_FETCH_JOBS: ${INDEXER_MAX_BLOCK_FETCH_JOBS}
       INDEXER_MIN_BLOCK_FETCH_JOBS: ${INDEXER_MIN_BLOCK_FETCH_JOBS}
       INDEXER_CHAIN_START_HEIGHT: ${INDEXER_CHAIN_START_HEIGHT}
       INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
+      # soon to be deprecated cosmos vars#
+      INDEXER_TENDERMINT_RPC: ${INDEXER_TENDERMINT_RPC}
+      INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
 
       INDEXER_HTTP_LISTEN_ADDR: 0.0.0.0:4444
       INDEXER_GRPC_LISTEN_ADDR: 0.0.0.0:9910
@@ -251,7 +257,11 @@ services:
       INDEXER_DB_MONGO_CONNECTION: ${INDEXER_DB_MONGO_CONNECTION}
       INDEXER_DB_MONGO_DBNAME: explorerV2
       ## cosmos
+      INDEXER_COSMOS_GRPC_ENDPOINTS: ${INDEXER_COSMOS_GRPC_ENDPOINTS}
+      INDEXER_TENDERMINT_RPC_ENDPOINTS: ${INDEXER_TENDERMINT_RPC_ENDPOINTS}
+      # soon to be deprecated cosmos vars#
       INDEXER_TENDERMINT_RPC: ${INDEXER_TENDERMINT_RPC}
+      INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
       ## service
       INDEXER_GRPC_LISTEN_ADDR: 0.0.0.0:9910
       INDEXER_HTTP_LISTEN_ADDR: 0.0.0.0:4444
@@ -313,15 +323,14 @@ services:
       INDEXER_DB_BLOCK_BATCH: 50
       ## cosmos
       INDEXER_COSMOS_CHAIN_ID: ${CHAIN_ID}
-      # deprecated: Use INDEXER_TENDERMINT_RPC_ENDPOINTS instead
-      INDEXER_TENDERMINT_RPC: ${INDEXER_TENDERMINT_RPC}
-      INDEXER_TENDERMINT_RPC_ENDPOINTS: ${INDEXER_TENDERMINT_RPC}
-      # deprecated: Use INDEXER_COSMOS_GRPC_ENDPOINTS instead
-      INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
-      INDEXER_COSMOS_GRPC_ENDPOINTS: ${INDEXER_COSMOS_GRPC}
+      INDEXER_COSMOS_GRPC_ENDPOINTS: ${INDEXER_COSMOS_GRPC_ENDPOINTS}
+      INDEXER_TENDERMINT_RPC_ENDPOINTS: ${INDEXER_TENDERMINT_RPC_ENDPOINTS}
       INDEXER_BLOCK_FETCH_JOBS: ${INDEXER_EVENTPROVIDER_BLOCK_FETCH_JOBS}
       INDEXER_CHAIN_START_HEIGHT: ${INDEXER_CHAIN_START_HEIGHT}
       INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
+      # soon to be deprecated cosmos vars#
+      INDEXER_TENDERMINT_RPC: ${INDEXER_TENDERMINT_RPC}
+      INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
       
       INDEXER_GRPC_LISTEN_ADDR: 0.0.0.0:9910
       INDEXER_HTTP_LISTEN_ADDR: 0.0.0.0:4444
@@ -383,9 +392,12 @@ services:
       ## cosmos
       INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS: ${INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS}
       INDEXER_COSMOS_CHAIN_ID: ${CHAIN_ID}
+      INDEXER_COSMOS_GRPC_ENDPOINTS: ${INDEXER_COSMOS_GRPC_ENDPOINTS}
+      INDEXER_TENDERMINT_RPC_ENDPOINTS: ${INDEXER_TENDERMINT_RPC_ENDPOINTS}
+      INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
+      # soon to be deprecated cosmos vars#
       INDEXER_TENDERMINT_RPC: ${INDEXER_TENDERMINT_RPC}
       INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
-      INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
       ## service
       INDEXER_HTTP_LISTEN_ADDR: 0.0.0.0:4444
       INDEXER_GRPC_LISTEN_ADDR: 0.0.0.0:9910
@@ -440,11 +452,14 @@ services:
       INDEXER_PPROF_ADDR: "0.0.0.0:6060"
       # cmd specific
       ## cosmos
-      INDEXER_TENDERMINT_RPC: ${INDEXER_TENDERMINT_RPC}
-      INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
+      INDEXER_COSMOS_GRPC_ENDPOINTS: ${INDEXER_COSMOS_GRPC_ENDPOINTS}
+      INDEXER_TENDERMINT_RPC_ENDPOINTS: ${INDEXER_TENDERMINT_RPC_ENDPOINTS}
       INDEXER_COSMOS_CHAIN_ID: ${CHAIN_ID}
       INDEXER_FEE_PAYER_PK: ${EXCHANGE_FEE_PAYER_PK}
       INDEXER_GAS_ADJUSTMENT_COEF: 1.5
+      # soon to be deprecated cosmos vars#
+      INDEXER_TENDERMINT_RPC: ${INDEXER_TENDERMINT_RPC}
+      INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
       ## service
       INDEXER_GRPC_LISTEN_ADDR: 0.0.0.0:9910
       INDEXER_HTTP_LISTEN_ADDR: 0.0.0.0:4444
