--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -203,8 +203,8 @@ services:
       ## cosmos
       INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS: ${INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS}
       INDEXER_COSMOS_CHAIN_ID: ${CHAIN_ID}
-      INDEXER_TENDERMINT_RPC: ${INDEXER_TENDERMINT_RPC}
-      INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
+      INDEXER_COSMOS_GRPC_ENDPOINTS: ${INDEXER_COSMOS_GRPC_ENDPOINTS}
+      INDEXER_TENDERMINT_RPC_ENDPOINTS: ${INDEXER_TENDERMINT_RPC_ENDPOINTS}
       INDEXER_COSMOS_LCD_URL: ${INDEXER_COSMOS_LCD_URL}
       INDEXER_BLOCK_FETCH_JOBS: ${INDEXER_BLOCK_FETCH_JOBS}
       INDEXER_MAX_BLOCK_FETCH_JOBS: ${INDEXER_MAX_BLOCK_FETCH_JOBS}
@@ -213,6 +213,9 @@ services:
       INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS: ${INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS}
       INDEXER_CHAIN_START_HEIGHT: ${INDEXER_CHAIN_START_HEIGHT}
       INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
+      # soon to be deprecated cosmos vars #
+      INDEXER_TENDERMINT_RPC: ${INDEXER_TENDERMINT_RPC}
+      INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
       # resync
       INDEXER_RESYNC_DB_NAME: ${INDEXER_RESYNC_DB_NAME}
       INDEXER_RESYNC_FLOW: ${INDEXER_RESYNC_FLOW}
@@ -279,13 +282,16 @@ services:
       INDEXER_DB_MONGO_CONNECTION: ${INDEXER_DB_MONGO_CONNECTION}
       INDEXER_DB_MONGO_DBNAME: ${INDEXER_DB_MONGO_DBNAME}
       ## cosmos
-      INDEXER_TENDERMINT_RPC: ${INDEXER_TENDERMINT_RPC}
-      INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
+      INDEXER_COSMOS_GRPC_ENDPOINTS: ${INDEXER_COSMOS_GRPC_ENDPOINTS}
+      INDEXER_TENDERMINT_RPC_ENDPOINTS: ${INDEXER_TENDERMINT_RPC_ENDPOINTS}
       INDEXER_COSMOS_CHAIN_ID: ${CHAIN_ID}
       INDEXER_FEE_PAYER_PK: ${EXCHANGE_FEE_PAYER_PK}
       INDEXER_GAS_ADJUSTMENT_COEF: ${INDEXER_GAS_ADJUSTMENT_COEF}
       INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
       INDEXER_COSMOS_LCD_URL: ${INDEXER_COSMOS_LCD_URL}
+      # soon to be deprecated cosmos vars#
+      INDEXER_TENDERMINT_RPC: ${INDEXER_TENDERMINT_RPC}
+      INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
       ## service
       INDEXER_GRPC_LISTEN_ADDR: 0.0.0.0:9910
       INDEXER_HTTP_LISTEN_ADDR: 0.0.0.0:4444
