update provisoner platform and rm compose version directive

--- a/docker/addons/docker-compose.provisioner.yaml
+++ b/docker/addons/docker-compose.provisioner.yaml
@@ -1,6 +1,7 @@
 version: '3.8'
 services:
   provisioner:
+    platform: linux/amd64
     container_name: injective-provisioner
     image: ubuntu:${UBUNTU_VERSION}
     command: [ "bash", "/home/ubuntu/scripts/provision-core.sh" ]
