feat: update indexer versions

--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -17,15 +17,15 @@ NETWORK=testnet
 PASSPHRASE=""
 
 # Service Versions #
-CHRONOS_API_VERSION=v1.15.9
-CHRONOS_PROCESS_VERSION=v1.15.9
-EVENTPROVIDER_API_VERSION=v1.15.9
-EVENTPROVIDER_PROCESS_VERSION=v1.15.9
-EXCHANGE_API_VERSION=v1.15.9
-EXCHANGE_PROCESS_VERSION=v1.15.9
-EXPLORER_API_VERSION=v1.15.9
-EXPLORER_PROCESS_VERSION=v1.15.9
-WEB3GW_APP_VERSION=v1.15.9
+CHRONOS_API_VERSION=v1.16.0-rc2
+CHRONOS_PROCESS_VERSION=v1.16.0-rc2
+EVENTPROVIDER_API_VERSION=v1.16.0-rc2
+EVENTPROVIDER_PROCESS_VERSION=v1.16.0-rc2
+EXCHANGE_API_VERSION=v1.16.0-rc2
+EXCHANGE_PROCESS_VERSION=v1.16.0-rc2
+EXPLORER_API_VERSION=v1.16.0-rc2
+EXPLORER_PROCESS_VERSION=v1.16.0-rc2
+WEB3GW_APP_VERSION=v1.16.0-rc2
 
 #MONGO LIMITS
 MONGO_RAM_LIMIT=32G
@@ -60,6 +60,8 @@ INJ_STATSD_AGENT="datadog"
 INJ_ADDR=""
 INJ_PEGGO_STATSD_DISABLED="true"
 INJ_PEGGO_STATSD_ADDR=""
+# EVM Specific Env #
+JSON_ENDPOINTS='--json-rpc.address="0.0.0.0:8545" --json-rpc.ws-address="0.0.0.0:8546" --json-rpc.api="eth,web3,net,txpool,debug,personal,inj" --json-rpc.enable=true'
 
 # Provisioner Specific Env #
 GIT_TESTNET_TAG="v1.10-1677061209"
