--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -45,7 +45,7 @@ LOG_BUGSNAG_ENABLED=false
 
 # Injective Core env #
 # Optional
-INJ_CORE_IMAGE_VERSION=v1.13.3-testnet
+INJ_CORE_IMAGE_VERSION=v1.16.0-beta.2
 # Resource limits works only with swarm mode
 INJ_CORE_STACK_RESOURCE_RAM_LIMIT=30G
 INJ_CORE_STACK_RESOURCE_RAM_RESEVATION=20G
