--- a/docker/docker-compose.prod.yaml
+++ b/docker/docker-compose.prod.yaml
@@ -7,6 +7,11 @@ services:
     logging:
       driver: journald
 
+  mongo-exporter:
+    restart: always
+    logging:
+      driver: journald
+
   injective-core:
     restart: always
     logging:
