feat: mainnet upgrade v1.16.0

--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -45,7 +45,7 @@ LOG_BUGSNAG_ENABLED=false
 
 # Injective Core env #
 # Optional
-INJ_CORE_IMAGE_VERSION=v1.14.0
+INJ_CORE_IMAGE_VERSION=v1.16.0
 # Resource limits works only with swarm mode
 INJ_CORE_STACK_RESOURCE_RAM_LIMIT=80G
 INJ_CORE_STACK_RESOURCE_RAM_RESEVATION=30G
@@ -60,6 +60,8 @@ INJ_STATSD_AGENT="datadog"
 INJ_ADDR=""
 INJ_PEGGO_STATSD_DISABLED="true"
 INJ_PEGGO_STATSD_ADDR=""
+# EVM Specific Env #
+INJ_CORE_JSON_RPC_FLAGS='--json-rpc.address="0.0.0.0:8545" --json-rpc.ws-address="0.0.0.0:8546" --json-rpc.api="eth,web3,net,txpool,inj" --json-rpc.enable=true'
 
 # Provisioner Specific Env #
 GIT_TESTNET_TAG="v0.4.19-1672847099"
