feat(indexer): add network exchange process

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -219,6 +219,7 @@ services:
       ## cosmos
       INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS: ${INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS}
       INDEXER_COSMOS_CHAIN_ID: ${CHAIN_ID}
+      INDEXER_COSMOS_CHAIN_NETWORK: ${NETWORK}
       INDEXER_COSMOS_GRPC_ENDPOINTS: ${INDEXER_COSMOS_GRPC_ENDPOINTS}
       INDEXER_TENDERMINT_RPC_ENDPOINTS: ${INDEXER_TENDERMINT_RPC_ENDPOINTS}
       INDEXER_COSMOS_LCD_URL: ${INDEXER_COSMOS_LCD_URL}
