--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -17,15 +17,15 @@ NETWORK=testnet
 PASSPHRASE=""
 
 # Service Versions #
-CHRONOS_API_VERSION=v1.16.0-rc2
-CHRONOS_PROCESS_VERSION=v1.16.0-rc2
-EVENTPROVIDER_API_VERSION=v1.16.0-rc2
-EVENTPROVIDER_PROCESS_VERSION=v1.16.0-rc2
-EXCHANGE_API_VERSION=v1.16.0-rc2
-EXCHANGE_PROCESS_VERSION=v1.16.0-rc2
-EXPLORER_API_VERSION=v1.16.0-rc2
-EXPLORER_PROCESS_VERSION=v1.16.0-rc2
-WEB3GW_APP_VERSION=v1.16.0-rc2
+EXCHANGE_PROCESS_VERSION=v1.16.68
+EXCHANGE_API_VERSION=v1.16.68
+CHRONOS_PROCESS_VERSION=v1.16.54
+CHRONOS_API_VERSION=v1.16.54
+EXPLORER_PROCESS_VERSION=v1.16.53
+EXPLORER_API_VERSION=v1.16.54
+EVENTPROVIDER_PROCESS_VERSION=v1.16.59
+EVENTPROVIDER_API_VERSION=v1.16.59
+WEB3GW_APP_VERSION=v1.16.54
 
 #MONGO LIMITS
 MONGO_RAM_LIMIT=32G
