[D2-463] feat: add json-rpc feehistory cap

--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -61,7 +61,7 @@ INJ_ADDR=""
 INJ_PEGGO_STATSD_DISABLED="true"
 INJ_PEGGO_STATSD_ADDR=""
 # EVM Specific Env #
-INJ_CORE_JSON_RPC_FLAGS="--json-rpc.address="0.0.0.0:8545" --json-rpc.ws-address="0.0.0.0:8546" --json-rpc.api="eth,web3,net,txpool,inj" --json-rpc.enable=true --json-rpc.allow-unprotected-txs=true"
+INJ_CORE_JSON_RPC_FLAGS='--json-rpc.address="0.0.0.0:8545" --json-rpc.ws-address="0.0.0.0:8546" --json-rpc.api="eth,web3,net,txpool,inj" --json-rpc.enable=true --json-rpc.allow-unprotected-txs=true --json-rpc.feehistory-cap=200'
 
 # Provisioner Specific Env #
 GIT_TESTNET_TAG="v0.4.19-1672847099"
