feat: v1.17 upgrade indexer versions

--- a/docker/addons/docker-compose.dex.yaml
+++ b/docker/addons/docker-compose.dex.yaml
@@ -49,6 +49,7 @@ services:
       INDEXER_DB_EVENTPROVIDER_ENDPOINT: ${INDEXER_DB_EVENTPROVIDER_ENDPOINT}
       INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS: ${INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS}
       INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
+      INDEXER_DB_MONGO_ASYNC_INDEXING: "true"
       # soon to be deprecated cosmos vars#
       INDEXER_TENDERMINT_RPC: ${INDEXER_TENDERMINT_RPC}
       INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
@@ -184,6 +185,7 @@ services:
       INDEXER_DB_PAUSE_HEIGHT:
       INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS: ${INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS}
       INDEXER_DB_BLOCK_BATCH: 100
+      INDEXER_DB_MONGO_ASYNC_INDEXING: "true"
       # cosmos
       INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS: ${INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS}
       INDEXER_COSMOS_CHAIN_ID: ${CHAIN_ID}
@@ -256,6 +258,7 @@ services:
       ## mongo
       INDEXER_DB_MONGO_CONNECTION: ${INDEXER_DB_MONGO_CONNECTION}
       INDEXER_DB_MONGO_DBNAME: explorerV2
+      INDEXER_DB_MONGO_ASYNC_INDEXING: "true"
       ## cosmos
       INDEXER_COSMOS_GRPC_ENDPOINTS: ${INDEXER_COSMOS_GRPC_ENDPOINTS}
       INDEXER_TENDERMINT_RPC_ENDPOINTS: ${INDEXER_TENDERMINT_RPC_ENDPOINTS}
@@ -321,6 +324,7 @@ services:
       INDEXER_DB_MONGO_CONNECTION: ${INDEXER_DB_MONGO_CONNECTION}
       INDEXER_DB_MONGO_DBNAME: eventProviderV2
       INDEXER_DB_BLOCK_BATCH: 50
+      INDEXER_DB_MONGO_ASYNC_INDEXING: "true"
       ## cosmos
       INDEXER_COSMOS_CHAIN_ID: ${CHAIN_ID}
       INDEXER_COSMOS_GRPC_ENDPOINTS: ${INDEXER_COSMOS_GRPC_ENDPOINTS}
@@ -389,6 +393,7 @@ services:
       ## mongo
       INDEXER_DB_MONGO_CONNECTION: ${INDEXER_DB_MONGO_CONNECTION}
       INDEXER_DB_MONGO_DBNAME: eventProviderV2
+      INDEXER_DB_MONGO_ASYNC_INDEXING: "true"
       ## cosmos
       INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS: ${INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS}
       INDEXER_COSMOS_CHAIN_ID: ${CHAIN_ID}
