--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -216,6 +216,7 @@ services:
       INDEXER_DB_MIGRATION_HEIGHT: ${INDEXER_DB_MIGRATION_HEIGHT}
       INDEXER_DB_MIGRATION_NAME: ${INDEXER_DB_MIGRATION_NAME}
       INDEXER_DB_PAUSE_HEIGHT: ${INDEXER_DB_PAUSE_HEIGHT}
+      INDEXER_DB_MONGO_ASYNC_INDEXING: "true"
 
       ## cosmos
       INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS: ${INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS}
@@ -299,6 +300,7 @@ services:
       ## mongo
       INDEXER_DB_MONGO_CONNECTION: ${INDEXER_DB_MONGO_CONNECTION}
       INDEXER_DB_MONGO_DBNAME: ${INDEXER_DB_MONGO_DBNAME}
+      INDEXER_DB_MONGO_ASYNC_INDEXING: "true"
       ## cosmos
       INDEXER_COSMOS_GRPC_ENDPOINTS: ${INDEXER_COSMOS_GRPC_ENDPOINTS}
       INDEXER_TENDERMINT_RPC_ENDPOINTS: ${INDEXER_TENDERMINT_RPC_ENDPOINTS}
