--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -21,6 +21,8 @@ EXCHANGE_PROCESS_VERSION=v1.17.17
 EXCHANGE_API_VERSION=v1.17.16
 CHRONOS_PROCESS_VERSION=v1.17.16
 CHRONOS_API_VERSION=v1.17.16
+CHART_PROCESS_VERSION=v1.17.16
+CHART_API_VERSION=v1.17.16
 EXPLORER_PROCESS_VERSION=v1.17.16
 EXPLORER_API_VERSION=v1.17.16
 EVENTPROVIDER_PROCESS_VERSION=v1.17.19
