--- a/docker/docker-compose.dev.yaml
+++ b/docker/docker-compose.dev.yaml
@@ -34,6 +34,16 @@ services:
     logging:
       driver: journald
 
+  indexer-chart-api:
+    restart: on-failure
+    logging:
+      driver: journald
+
+  indexer-chart-process:
+    restart: on-failure
+    logging:
+      driver: journald
+
   indexer-eventprovider-process:
     restart: on-failure
     logging:
