fix: use proper prefix for chart api in statsd

--- a/docker/addons/docker-compose.dex.yaml
+++ b/docker/addons/docker-compose.dex.yaml
@@ -244,7 +244,7 @@ services:
       LOG_BUGSNAG_ENABLED: ${LOG_BUGSNAG_ENABLED}
       ## statsd
       INDEXER_STATSD_AGENT: ${INDEXER_STATSD_AGENT}
-      INDEXER_STATSD_PREFIX: indexer-chronos-api
+      INDEXER_STATSD_PREFIX: indexer-chart-api
       INDEXER_STATSD_ADDR: host.docker.internal:8125
       INDEXER_STATSD_STUCK_DUR: 5m
       INDEXER_STATSD_MOCKING: ${INDEXER_STATSD_MOCKING}
