--- a/docker/addons/docker-compose.provisioner.yaml
+++ b/docker/addons/docker-compose.provisioner.yaml
@@ -25,6 +25,7 @@ services:
       SYNC_EXCHANGE_SNAPSHOT: ${SYNC_EXCHANGE_SNAPSHOT}
       SYNC_EXPLORER_SNAPSHOT: ${SYNC_EXPLORER_SNAPSHOT}
       SYNC_CHRONOS_SNAPSHOT: ${SYNC_CHRONOS_SNAPSHOT}
+      SYNC_CHART_SNAPSHOT: ${SYNC_CHART_SNAPSHOT}
       SYNC_EVENT_PROVIDER_SNAPSHOT: ${SYNC_EVENT_PROVIDER_SNAPSHOT}
       SYNC_EVENT_PROVIDER_SNAPSHOT_TYPE: ${SYNC_EVENT_PROVIDER_SNAPSHOT_TYPE}
       INJ_HOME: /home/ubuntu/volumes/.injectived
