--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -47,7 +47,7 @@ LOG_BUGSNAG_ENABLED=false
 
 # Injective Core env #
 # Optional
-INJ_CORE_IMAGE_VERSION=v1.16.0-beta.2
+INJ_CORE_IMAGE_VERSION=v1.17.2-beta
 # Resource limits works only with swarm mode
 INJ_CORE_STACK_RESOURCE_RAM_LIMIT=30G
 INJ_CORE_STACK_RESOURCE_RAM_RESEVATION=20G
